# fastapi_identity_service

./: .gitignore  docker-compose.yaml  pyproject.toml  test.sql
app/: main.py  to_do.txt
app/api/v1/: routes.py
app/api/v1/endpoints/: user_endpoints.py
app/core/: config.py  container.py  database.py  ecode.py  exceptions.py  middleware.py
app/dto/user/request/: login_request.py  register_request.py
app/dto/user/response/: login_response.py  register_response.py
app/model/: __init__.py  base_model.py  user_model.py
app/repository/: __init__.py  base_repository.py
app/service/: __init__.py  base_service.py  user_service.py
app/util/: security.py
