[project]
name = "test-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.31",
]
